# TotpCommonCrypto

./: .gitignore  CMakeLists.txt  LICENSE  README.md  c_header.h  c_interface.cpp  main.cpp
include/: Base32Decoder.h  ByteSwap.h  TOTPTokenGenerator.h  base32_decoder.h  byte_swap.h  totp_token_generator.h
src/: Base32Decoder.cpp  TOTPTokenGenerator.cpp  base32_decoder.cc  totp_token_generator.cc
test/: .gitignore  Base32DecoderTest.cpp  CMakeLists.txt  CMakeLists.txt.in  CreateRandomDataset.py
